--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -33,8 +33,17 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       443 ssl;
         server_name  localhost;
+
+        ssl_certificate      /etc/pki/tls/certs/NGINX_TEST_SSL.crt;
+        ssl_certificate_key  /etc/pki/tls/private/NGINX_TEST_SSL.key;
+
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
+
+        ssl_ciphers  HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers  on;
 
         #charset koi8-r;
 
