--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,6 +1,7 @@
 
 #user  nobody;
 worker_processes  1;
+#worker_cpu_affinity 0010;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -33,7 +34,7 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       50081;
         server_name  localhost;
 
         #charset koi8-r;
