--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -3,7 +3,7 @@
 worker_processes  1;
 #worker_cpu_affinity 0010;
 
-#error_log  logs/error.log;
+#error_log  logs/error.log  debug;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
